// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwapRoutesController GET /swap-routes/{from}/{to} should return a direct path 1`] = `
[
  [
    {
      "address": "ct_pair2",
      "liquidityInfo": {
        "height": 1,
        "reserve0": "1",
        "reserve1": "1",
        "totalSupply": "1",
      },
      "synchronized": true,
      "token0": "ct_token2",
      "token1": "ct_token3",
    },
  ],
]
`;

exports[`SwapRoutesController GET /swap-routes/{from}/{to} should return an indirect path 1`] = `
[
  [
    {
      "address": "ct_pair1",
      "synchronized": true,
      "token0": "ct_token1",
      "token1": "ct_token2",
    },
    {
      "address": "ct_pair2",
      "liquidityInfo": {
        "height": 1,
        "reserve0": "1",
        "reserve1": "1",
        "totalSupply": "1",
      },
      "synchronized": true,
      "token0": "ct_token2",
      "token1": "ct_token3",
    },
  ],
]
`;

exports[`SwapRoutesController GET /swap-routes/{from}/{to} should return one direct path and one indirect path 1`] = `
[
  [
    {
      "address": "ct_pair4",
      "synchronized": true,
      "token0": "ct_token1",
      "token1": "ct_token5",
    },
  ],
  [
    {
      "address": "ct_pair1",
      "synchronized": true,
      "token0": "ct_token1",
      "token1": "ct_token2",
    },
    {
      "address": "ct_pair3",
      "liquidityInfo": {
        "height": 2,
        "reserve0": "2",
        "reserve1": "2",
        "totalSupply": "2",
      },
      "synchronized": true,
      "token0": "ct_token2",
      "token1": "ct_token5",
    },
  ],
]
`;

exports[`SwapRoutesController GET /swap-routes/{from}/{to} should return paths oven on reverse order of tokens 1`] = `
[
  [
    {
      "address": "ct_pair4",
      "synchronized": true,
      "token0": "ct_token1",
      "token1": "ct_token5",
    },
  ],
  [
    {
      "address": "ct_pair1",
      "synchronized": true,
      "token0": "ct_token1",
      "token1": "ct_token2",
    },
    {
      "address": "ct_pair3",
      "liquidityInfo": {
        "height": 2,
        "reserve0": "2",
        "reserve1": "2",
        "totalSupply": "2",
      },
      "synchronized": true,
      "token0": "ct_token2",
      "token1": "ct_token5",
    },
  ],
]
`;

exports[`SwapRoutesController GET /swap-routes/{from}/{to} should suppress some paths with only-listed=true  1`] = `
[
  [
    {
      "address": "ct_pair4",
      "synchronized": true,
      "token0": "ct_token1",
      "token1": "ct_token5",
    },
  ],
]
`;
